2012-02-03  Rafaël Carré  <funman@videolan.org>

	* libsrc/shell32.c (ApplicationAssociationRegistrationUI): Add UUIDs

2012-02-02  Rafaël Carré  <funman@videolan.org>

	* libsrc/strmiids.c (MEDIASUBTYPE_I420): Add GUID.

2012-02-01  Kai Tietz  <ktietz@redhat.com>

	* lib32/user32.def, lib64/user32.def: Add imports for
	SetGestureConfig, GetGestureConfig, GetGestureInfo, and
	CloseGestureInfoHandle.

2012-01-24  Kai Tietz  <ktietz@redhat.com>

	* lib64/msvcrt.def: Add forwarders to wide-(v)snprintf
	and provide snprintf.
	* lib32/msvcrt.def: Likewise.
	* stdio/vscanf2.S, stdio/vfwscanf2.S, stdio/vfscanf2.S,
	stdio/vsscanf2.S, stdio/vwscanf2.S, stdio/vswscanf2.S: New.
	* Makefile.am: Add new files for libmingex.a
	* Makefile.in: Regenerated.
	* configure: Regenerated.

2012-01-19  Ozkan Sezer  <sezeroz@gmail.com>

	Partially revert rev. 3656:
	* libsrc/agtctl_i.c: Remove from libuuid.a build rule and install
	as is under $(prefix)/$(host)/libsrc/
	* libsrc/agtsvr_i.c: Likewise.
	* libsrc/cdoex_i.c: Likewise.
	* libsrc/cdoexm_i.c: Likewise.
	* libsrc/cdosys_i.c: Likewise.
	* libsrc/emostore_i.c: Likewise.
	* libsrc/iisext_i.c: Likewise.
	* libsrc/mtsadmin_i.c: Likewise.
	* libsrc/mtxadmin_i.c: Likewise.
	* libsrc/scardssp_i.c: Likewise.
	* libsrc/scardssp_p.c: Likewise.
	* libsrc/tsuserex_i.c: Likewise.

2012-01-18  Kai Tietz  <ktietz@redhat.com>

	PR 3463580
	* testcases/t_exp_denormal.c: New test.
	* testcases/t_powi.c: New test.
	* complex/complex_internal.h (
	* math/exp.def.h: Adjust error-report for range-min.
	* math/powi.def.h: New file.
	* math/powif.c: Rewrite to use powi.def.h.
	* math/powi.c: Likewise.
	* math/powil.c: Likewise.

2012-01-17  Daniel Green  <venix1@gmail.com>

	* stdio/mingw_pformat.c (__pformat): Correct 'l' length modifier
	to follow C99 specification (7.19.6.1) with Windows.