@@ -1,3 +1,7 @@
+2012-02-07  Rafaël Carré  <funman@videolan.org>
+
+	* libsrc/dxva-uuid.c (New file): Add DXVA UUIDs
+
 2012-02-03  Rafaël Carré  <funman@videolan.org>
 
 	* libsrc/shell32.c (ApplicationAssociationRegistrationUI): Add UUIDs
